[gd_scene load_steps=7 format=2]

[ext_resource path="res://Rooms/SalaNRC/Walls/Wall2/SalaNRC_Wall2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Rooms/BaseRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://Rooms/SalaNRC/Walls/Wall0/SalaNRC_Wall0.tscn" type="PackedScene" id=3]
[ext_resource path="res://Rooms/SalaNRC/Walls/Wall1/SalaNRC_Wall1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Rooms/SalaNRC/Walls/SalaNRC.gd" type="Script" id=5]
[ext_resource path="res://Rooms/SalaNRC/Walls/Wall3/SalaNRC_Wall3.tscn" type="PackedScene" id=6]

[node name="SalaNRC" instance=ExtResource( 2 )]
script = ExtResource( 5 )

[node name="SalaNRC_Wall0" parent="Walls" index="0" instance=ExtResource( 3 )]

[node name="SalaNRC_Wall1" parent="Walls" index="1" instance=ExtResource( 4 )]
visible = false

[node name="SalaNRC_Wall2" parent="Walls" index="2" instance=ExtResource( 1 )]
visible = false

[node name="SalaNRC_Wall3" parent="Walls" index="3" instance=ExtResource( 6 )]
visible = false

[node name="UI" parent="UI Layer" index="0"]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" parent="UI Layer" index="1"]
text = "Sala NRC
"

[node name="ScreenModulate" parent="." index="2"]
visible = false
color = Color( 0.509804, 0.678431, 1, 1 )

[node name="PhoneLight" parent="." index="3"]
mode = 2

[editable path="UI Layer/UI"]
